src/app/core/pages/App/App.css
.app-window {
	margin-top: 1.1rem;
}

section:not(:first-child) {
	margin-top: 1.1rem;
}

.section-container h3 {
	margin: 0.8rem 0rem 0.2rem;
}

.separator-padding {
	padding-top: 24px;
	padding-bottom: 24px;
}

@media (max-width: 767px) {
	.separator-padding {
		padding-top: 16px;
		padding-bottom: 16px;
	}
}

